--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a class="navbar-brand" routerLink="">Portland Hiking Club</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="member-list">Member list</a></li>
       <li><a routerLink="about">About</a></li>
     </ul>
   </div>
