add member service.ts file

--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -1,3 +1,7 @@
-<p>
-  member-detail works!
-</p>
+<div>
+  <img src="{{(memberToDisplay | async)?.image}}" alt="Picture of Portland Hiking Club member">
+  <h3>{{(memberToDisplay | async)?.name}}</h3>
+  <h4>{{(memberToDisplay | async)?.address}}</h4>
+  <p>{{(memberToDisplay | async)?.about}}</p>
+  <p>{{(memberToDisplay | async)?.miles}}</p>
+</div>
