update member service and components for firebase

--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="member-detail">
   <img src="{{(memberToDisplay | async)?.image}}" alt="Picture of Portland Hiking Club member">
   <h3>{{(memberToDisplay | async)?.name}}</h3>
   <h4>{{(memberToDisplay | async)?.address}}</h4>
