add admin component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,3 @@
 <h2>Welcome to the club!</h2>
+
+<img id="welcome-photo" src="http://ycerp.org/wp-content/uploads/2014/09/YCERP-Group-Hike-atop-Bunsen-Peak.jpg" alt="Picture of Portland Hiking Club group photo">
