--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -3,5 +3,5 @@
   <h3>{{(memberToDisplay | async)?.name}}</h3>
   <h4>{{(memberToDisplay | async)?.address}}</h4>
   <p>{{(memberToDisplay | async)?.about}}</p>
-  <p>{{(memberToDisplay | async)?.miles}}</p>
+  <p>Miles hiked: {{(memberToDisplay | async)?.miles}}</p>
 </div>
