--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+img#welcome-photo {
+  width: 1000px;
+}
+
+div.member-detail img {
+  width: 400px;
+}
