add functionality to add new member

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -33,6 +33,6 @@
     </div>
   </div>
 </div>
-<div>
-  <app-marketplace></app-marketplace>
-</div>
+<!-- <div>
+  <app-member-list></app-member-list>
+</div> -->
