add functionality to edit members

--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -7,7 +7,7 @@
       {{member.address}}
       {{member.miles}}
       <hr>
-      <!-- <app-edit-member [selectedMember]="member"></app-edit-member> -->
+      <app-edit-member [selectedMember]="member"></app-edit-member>
     </div>
   </div>
 </div>
