add delete function to admin page

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -29,7 +29,7 @@
         <input #newImage class="form-control" id="image">
       </div>
 
-      <button (click)="submitForm(newName.value, newAddress.value, newAbout.value, newMiles.value, newImage.value); newName.value=''; newAddress.value=''; newAbout.value=''; newMiles.value=''; newImage.value=''">Add member</button>
+      <button class="btn btn-default" (click)="submitForm(newName.value, newAddress.value, newAbout.value, newMiles.value, newImage.value); newName.value=''; newAddress.value=''; newAbout.value=''; newMiles.value=''; newImage.value=''">Add member</button>
     </div>
   </div>
 </div>
