--- a/src/app/edit-member/edit-member.component.html
+++ b/src/app/edit-member/edit-member.component.html
@@ -20,5 +20,5 @@
 <input [(ngModel)]="selectedMember.miles">
 <br>
 
-<button (click)="updateMember(selectedMember)">Update</button>
-<!-- <button (click)="deleteMember(selectedMember)">Delete</button> -->
+<button class="btn btn-default" (click)="updateMember(selectedMember)">Update</button>
+<button class="btn btn-danger" (click)="deleteMember(selectedMember)">Delete</button>
