add css styling

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,17 @@
 <h2>About the club</h2>
 <hr>
 <br>
+<div class="about-page">
 <h4>Early days of the club</h4>
-<p>
-Oregon Trail Hawthorne anachronism yupster beardfest zwickelmania tall bikes small plates joggers pearl district breweries Rocky Butte 82nd Avenue of Roses unicycling with bagpipes and Darth Vader mask farm to table. bridgetown mellow secular humanists fifth quadrant  Portlandia cashew cheese co-op handcrafted Mount Tabor Forest Park vibrant stripclubs NoPo vegan strip clubs tall boys. vegan Alberta Arts no, you go pork belly microbrew put a bird on it game nights snowpacolypse indie rock.
-</p>
-<h4>Growth and our new clubhouse</h4>
-<p>
-Vibrant west hills money more rain co-op plaid beardfest Belmont urban farmer beerfest evergreens oh Portland NoPo wood-fired oven also beers vegan meatball sub. UGB tulips Gresham Silicon Forest muesli fixed gear stumptown cocaine Alberta Arts anachronism direct trade sustainable IPA DIY nanobrewery First Thursdays. I like big buttes organic duck fat confit white people late-night happy hours indie rock zinester pork belly frozen fog charcuterie Mount Tabor clouds food carts new seasons. Cascadia dark ale scenester.
-</p>
-<h4>Today's Portland Hiking Club</h4>
-<p>
-James Mercer zinester urban farmer microbrew indie rock farm to table pearl district Gresham bubble tea stripclubs. organic hops explosion tall bikes dog parks put a bird on it no, you go a dog gym patchouli nitro brew plaid zoobombing flannel Last Thursday raised beds NoPo IPA. stumptown moustache joggers Silicon Forest Beaverton Cascadia rivers wood-fired oven freegans. outdoorsy going to the coast fixed gear IPA Belmont small plates I like big buttes evergreens beerfest pickled.
-</p>
+  <p>
+  Oregon Trail Hawthorne anachronism yupster beardfest zwickelmania tall bikes small plates joggers pearl district breweries Rocky Butte 82nd Avenue of Roses unicycling with bagpipes and Darth Vader mask farm to table. bridgetown mellow secular humanists fifth quadrant  Portlandia cashew cheese co-op handcrafted Mount Tabor Forest Park vibrant stripclubs NoPo vegan strip clubs tall boys. vegan Alberta Arts no, you go pork belly microbrew put a bird on it game nights snowpacolypse indie rock.
+  </p>
+  <h4>Growth and our new clubhouse</h4>
+  <p>
+  Vibrant west hills money more rain co-op plaid beardfest Belmont urban farmer beerfest evergreens oh Portland NoPo wood-fired oven also beers vegan meatball sub. UGB tulips Gresham Silicon Forest muesli fixed gear stumptown cocaine Alberta Arts anachronism direct trade sustainable IPA DIY nanobrewery First Thursdays. I like big buttes organic duck fat confit white people late-night happy hours indie rock zinester pork belly frozen fog charcuterie Mount Tabor clouds food carts new seasons. Cascadia dark ale scenester.
+  </p>
+  <h4>Today's Portland Hiking Club</h4>
+  <p>
+  James Mercer zinester urban farmer microbrew indie rock farm to table pearl district Gresham bubble tea stripclubs. organic hops explosion tall bikes dog parks put a bird on it no, you go a dog gym patchouli nitro brew plaid zoobombing flannel Last Thursday raised beds NoPo IPA. stumptown moustache joggers Silicon Forest Beaverton Cascadia rivers wood-fired oven freegans. outdoorsy going to the coast fixed gear IPA Belmont small plates I like big buttes evergreens beerfest pickled.
+  </p>
+</div>
