--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -26,7 +26,7 @@
 
       <div class="form-group">
         <label type="number" for="miles">Miles hiked:</label><br>
-        <input type="number" #newMiles class="form-control" id="miles">
+        <input #newMiles class="form-control" id="miles">
       </div>
 
       <button class="btn btn-default" (click)="submitForm(newName.value, newAddress.value, newAbout.value, newImage.value, newMiles.value); newName.value=''; newAddress.value=''; newAbout.value=''; newImage.value=''; newMiles.value=''">Add member</button>
