--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,48 @@
 img#welcome-photo {
   width: 1000px;
+  border-color: white;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 10px;
 }
-
+body h1 {
+  font-size: 6em;
+  font-weight: 300;
+  color: white;
+}
+body h2 {
+  color: white;
+}
+div.miles-filter {
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 8px;
+  border-radius: 5px;
+}
 div.member-detail img {
   width: 400px;
+}
+
+div.panel-body img {
+  width: 200px;
+  float: left;
+  margin-right: 20px;
+}
+body {
+  background-image: url("./assets/images/mountains.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin-top: 130px;
+}
+nav.navbar {
+  position: fixed;
+  width: 100%;
+}
+.container {
+  padding-top: 70px;
+}
+div .about-page {
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 20px;
+  border-radius: 10px;
 }
