add content to home page, add styling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
 <h2>Welcome to the club!</h2>
 
 <img id="welcome-photo" src="http://ycerp.org/wp-content/uploads/2014/09/YCERP-Group-Hike-atop-Bunsen-Peak.jpg" alt="Picture of Portland Hiking Club group photo">
+
+<div class="home-page">
+  <h3>We love to hike with our friends</h3>
+  <p>
+  Oregon Trail Hawthorne anachronism yupster beardfest zwickelmania tall bikes small plates joggers pearl district breweries Rocky Butte 82nd Avenue of Roses unicycling with bagpipes and Darth Vader mask farm to table. bridgetown mellow secular humanists fifth quadrant  Portlandia cashew cheese co-op handcrafted Mount Tabor Forest Park vibrant stripclubs NoPo vegan strip clubs tall boys. vegan Alberta Arts no, you go pork belly microbrew put a bird on it game nights snowpacolypse indie rock.
+  </p>
+</div>
