--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <h2>Welcome to the club!</h2>
 
-<img id="welcome-photo" src="http://ycerp.org/wp-content/uploads/2014/09/YCERP-Group-Hike-atop-Bunsen-Peak.jpg" alt="Picture of Portland Hiking Club group photo">
+<img id="welcome-photo" src="http://ycerp.org/wp-content/uploads/2014/09/YCERP-Group-Hike-atop-Bunsen-Peak.jpg" alt="Picture of Portland Hiking Club group">
 
 <div class="home-page">
   <h3>We love to hike with our friends</h3>
