add styling to member list and member detail

--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -16,5 +16,9 @@
       <hr>
       <app-edit-member [selectedMember]="member"></app-edit-member>
     </div>
+    <div class="clearfix">
+      <div><br></div>
+      <div></div>
+    </div>
   </div>
 </div>
