--- a/src/styles.css
+++ b/src/styles.css
@@ -64,12 +64,16 @@ nav.navbar {
   width: 100%;
 }
 .container {
-  padding-top: 70px;
+  padding-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 div.about-page {
   background-color: rgba(255, 255, 255, 0.7);
   padding: 20px;
   border-radius: 10px;
+  width: 90%;
 }
 div.home-page {
   background-color: rgba(255, 255, 255, 0.7);
